--- a/YRecycleview/app/src/main/res/layout/item.xml
+++ b/YRecycleview/app/src/main/res/layout/item.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <LinearLayout
-        android:gravity="center_vertical"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:orientation="vertical">
+        android:layout_height="60dp">
 
         <TextView
             android:id="@+id/tv_item"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="@string/app_name" />
-    </LinearLayout>
-
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#49ff0000"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textColor="@android:color/white" />
+    </RelativeLayout>
 </LinearLayout>
