--- a/YRecycleview/mylibrary/src/main/res/values/colors.xml
+++ b/YRecycleview/mylibrary/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1E86CA</color>
+  <!--  <color name="colorPrimary">#1E86CA</color>-->
 
 </resources>
