--- a/YRecycleview/app/src/main/res/layout/activity_main.xml
+++ b/YRecycleview/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <yuan.kuo.yu.view.YRecycleview
-        android:id="@+id/ycl"
+    <Button
+        android:id="@+id/bt_load_more_refresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:text="上拉刷新和下拉加载" />
+
+    <Button
+        android:id="@+id/bt_load_more_refresh_swipe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="上拉刷新和加载更多和侧滑删除" />
+
+</LinearLayout>
