--- a/YRecycleview/app/src/main/res/layout/item_content.xml
+++ b/YRecycleview/app/src/main/res/layout/item_content.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="?android:colorBackground"
-    android:layout_height="60dp">
+    android:layout_height="60dp"
+    android:background="?android:colorBackground">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="60dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/item_content"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="59.5dp"
             android:background="#49ff0000"
             android:gravity="center"
             android:text="小雨来了"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
-    </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@android:color/white" />
+    </LinearLayout>
 </FrameLayout>
