--- a/YRecycleview/app/src/main/res/layout/emptyview.xml
+++ b/YRecycleview/app/src/main/res/layout/emptyview.xml
@@ -5,8 +5,8 @@
     android:orientation="vertical">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
         android:text="我也不想没数据 ! ! !" />
 </RelativeLayout>
