提交了1.0.1版本的重构

--- a/YRecycleview/app/src/main/res/layout/activity_empty_view.xml
+++ b/YRecycleview/app/src/main/res/layout/activity_empty_view.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <yuan.kuo.yu.view.YRecycleview
+    <yuan.kuo.yu.view.YRecyclerView
         android:id="@+id/rcv_empty_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
