--- a/YRecycleview/app/src/main/res/layout/head_custom.xml
+++ b/YRecycleview/app/src/main/res/layout/head_custom.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="45dp"
         android:gravity="center"
-        android:text="我也不想没数据 ! ! !" />
+        android:text="这是一个头布局"/>
 </RelativeLayout>
