提交了上啦加载更多的时候出现空白的问题的修改

--- a/YRecycleview/mylibrary/src/main/res/layout/foot_recycleview_loadmore.xml
+++ b/YRecycleview/mylibrary/src/main/res/layout/foot_recycleview_loadmore.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -11,20 +10,21 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:visibility="gone">
 
         <yuan.kuo.yu.load.CircleLoadingView
             android:id="@+id/pb_y_recycleview_foot_loadmore_progressbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:progress_color="#49ff0000"/>
+            app:progress_color="#49ff0000" />
 
         <TextView
             android:id="@+id/tv_y_recycleview_foot_loadmore_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="正在加载..."/>
+            android:text="正在加载..." />
     </LinearLayout>
 
     <TextView
@@ -32,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="600dp"
         android:gravity="center"
-        android:text="暂无数据~"/>
+        android:text="暂无数据~"
+        android:visibility="gone" />
 
 </LinearLayout>
